# kontra-config

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  kontra-config.cabal
src/: Configuration.hs
