name:                kontra-config
version:             0.1
synopsis:            Configuration management
homepage:            https://github.com/scrive/kontra-config
license:             BSD3
license-file:        LICENSE
author:              Scrive
maintainer:          Gracjan Polak <gracjan@scrive.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1

library
  exposed-modules:     Configuration

  build-depends:       base < 5
                     , transformers-base
                     , data-default
                     , exceptions >= 0.6
                     , bytestring
                     , utf8-string
                     , text
                     , unjson
                     , yaml

  hs-source-dirs:      src

  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , ScopedTypeVariables
